# lesson28

./: .gitignore  docker-compose.yaml  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_selectionad.py  0003_rename_ads_selectionad_items.py  0004_alter_selectionad_options.py  0005_alter_selectionad_owner.py  0006_alter_selectionad_items.py  0007_category_slug_alter_ad_description_alter_ad_name_and_more.py  0008_alter_category_slug.py  0009_alter_category_slug.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: ad.json  category.json  convert_csv_to_json.py  location.json  user.json  users_user_location.csv
db_avito/: postmaster.pid
db_avito/base/13757/: 1247  1249  1259  16384  16385  16390  16392  16393  16396  16398  16400  16401  16404  16424  16426  16440  16447  16463  16492  16511  16512  (+58 more)
db_avito/global/: 1260  pg_control  pg_internal.init
db_avito/pg_stat/: db_0.stat  db_13757.stat  global.stat
db_avito/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
db_avito/pg_xact/: 0000
tests/: conftest.py  factories.py  fixtures.py  test_ads.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_name.py  0003_alter_location_lat_alter_location_lng.py  0004_alter_user_managers_user_date_joined_user_email_and_more.py  0005_alter_user_age.py  0006_user_birth_date_alter_user_email.py  0007_alter_user_birth_date_alter_user_email.py  0008_alter_user_email.py  0009_alter_user_email.py
